@@ -8,5 +8,6 @@ Tests for the LaTeX writer
 
 .. include:: data/nonalphanumeric.txt
 .. include:: data/unicode.txt
+.. include:: data/custom_roles.txt
 
 .. include:: data/errors.txt
